[package]
name = "hermes"
version = "0.1.0"
authors = ["Victor Lopez <vhrlopes@gmail.com>"]
edition = "2018"

[features]
trace = ["tracing", "tracing-subscriber"]

[dependencies]
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.1", optional = true }
rand = "0.7"

[dev-dependencies]
loom = "^0.2"
